// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - java:graalvm with default options should call source snapshot 1`] = `
{
  "addMavenDefinition": [
    {
      "pluginManagement": [
        {
          "additionalContent": "
        <configuration>
            <fallback>false</fallback>
            <classesDirectory>\${project.build.outputDirectory}</classesDirectory>
            <metadataRepository>
                <enabled>true</enabled>
                <version>GRAALVM_REACHABILITY_METADATA_VERSION</version>
            </metadataRepository>
            <imageName>\${native-image-name}</imageName>
            <verbose>true</verbose>
            <buildArgs>
                <buildArg>-Duser.language=en</buildArg>
                <buildArg>-H:IncludeLocales=</buildArg>
            </buildArgs>
            <jvmArgs>
                <arg>-Xms4g</arg>
                <arg>-Xmx10g</arg>
            </jvmArgs>
        </configuration>",
          "artifactId": "native-maven-plugin",
          "groupId": "org.graalvm.buildtools",
          "version": "\${native-buildtools.version}",
        },
        {
          "additionalContent": "
                <configuration>
                    <enableLazyInitialization>true</enableLazyInitialization>
                </configuration>",
          "artifactId": "hibernate-enhance-maven-plugin",
          "groupId": "org.hibernate.orm.tooling",
          "version": "\${hibernate.version}",
        },
      ],
      "profiles": [
        {
          "content": "
        <properties>
            <repackage.classifier>exec</repackage.classifier>
            <modernizer.skip>true</modernizer.skip>
            <spring.h2.console.enabled>false</spring.h2.console.enabled>
        </properties>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.hibernate.orm.tooling</groupId>
                    <artifactId>hibernate-enhance-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>enhance</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Spring-Boot-Native-Processed>true</Spring-Boot-Native-Processed>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <builder>paketobuildpacks/builder:tiny</builder>
                            <env>
                                <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                            </env>
                        </image>
                    </configuration>
                    <executions>
                        <execution>
                            <id>process-aot</id>
                            <goals>
                                <goal>process-aot</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>add-reachability-metadata</id>
                            <goals>
                                <goal>add-reachability-metadata</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>compile-no-fork</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                        <execution>
                            <id>test-native</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <phase>test</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </build>",
          "id": "native",
        },
      ],
      "properties": [
        {
          "property": "repackage.classifier",
        },
        {
          "property": "native-image-name",
          "value": "native-executable",
        },
        {
          "property": "native-buildtools.version",
          "value": "'NATIVE-BUILD-TOOLS-VERSION'",
        },
      ],
    },
  ],
  "addNativeHint": [
    {
      "advanced": [
        "hints.reflection().registerType(sun.misc.Unsafe.class, (hint) -> hint.withMembers(MemberCategory.INVOKE_PUBLIC_METHODS));",
        "hints.reflection().registerType(java.util.Locale.class, (hint) -> hint.withMembers(MemberCategory.INVOKE_PUBLIC_METHODS));",
      ],
      "resources": [
        "i18n/*",
      ],
    },
  ],
  "editJavaFile": [
    [
      "src/main/java/com/mycompany/myapp/JhipsterApp.java",
      {
        "annotations": [
          {
            "annotation": "ImportRuntimeHints",
            "package": "org.springframework.context.annotation",
            "parameters": [Function],
          },
        ],
      },
    ],
    [
      "src/main/java/com/mycompany/myapp//web/rest/errors/FieldErrorVM.java",
      {
        "annotations": [
          {
            "annotation": "RegisterReflectionForBinding",
            "package": "org.springframework.aot.hint.annotation",
            "parameters": [Function],
          },
        ],
      },
    ],
  ],
}
`;

exports[`generator - java:graalvm with default options should call source snapshot 2`] = `
{
  "addGradleDependencyCatalogPlugin": [
    {
      "addToBuild": true,
      "id": "org.graalvm.buildtools.native",
      "pluginName": "graalvm",
      "version": "'NATIVE-BUILD-TOOLS-VERSION'",
    },
  ],
  "addNativeHint": [
    {
      "advanced": [
        "hints.reflection().registerType(sun.misc.Unsafe.class, (hint) -> hint.withMembers(MemberCategory.INVOKE_PUBLIC_METHODS));",
        "hints.reflection().registerType(java.util.Locale.class, (hint) -> hint.withMembers(MemberCategory.INVOKE_PUBLIC_METHODS));",
      ],
      "resources": [
        "i18n/*",
      ],
    },
  ],
  "applyFromGradle": [
    {
      "script": "gradle/native.gradle",
    },
  ],
  "editJavaFile": [
    [
      "src/main/java/com/mycompany/myapp/JhipsterApp.java",
      {
        "annotations": [
          {
            "annotation": "ImportRuntimeHints",
            "package": "org.springframework.context.annotation",
            "parameters": [Function],
          },
        ],
      },
    ],
    [
      "src/main/java/com/mycompany/myapp//web/rest/errors/FieldErrorVM.java",
      {
        "annotations": [
          {
            "annotation": "RegisterReflectionForBinding",
            "package": "org.springframework.aot.hint.annotation",
            "parameters": [Function],
          },
        ],
      },
    ],
    [
      "src/test/java/com/mycompany/myapp//TechnicalStructureTest.java",
      {
        "staticImports": [
          "com.tngtech.archunit.core.domain.JavaClass.Predicates.simpleNameEndingWith",
        ],
      },
      [Function],
    ],
  ],
}
`;

exports[`generator - java:graalvm with default options should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md.jhi.native": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/NativeConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java:graalvm with default options should match files snapshot 2`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md.jhi.native": {
    "stateCleared": "modified",
  },
  "gradle/native.gradle": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/NativeConfiguration.java": {
    "stateCleared": "modified",
  },
}
`;
